--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ DATABASE_URL="mysql://..."
 AUTH_SECRET=1234567890
 
 ## Create a GitHub OAuth app here: https://docs.github.com/en/apps/oauth-apps/building-oauth-apps/creating-an-oauth-app
-OAUTH_CLIENT_KEY=
-OAUTH_CLIENT_SECRET=
+OAUTH_CLIENT_KEY=123
+OAUTH_CLIENT_SECRET=123
 
 ## Support OAuth login on preview deployments, see: https://authjs.dev/guides/basics/deployment#securing-a-preview-deployment
 AUTH_REDIRECT_PROXY_URL=https://eliehamouche.com/api/auth
 
 # For tweets in /blog
-TWITTER_API_TOKEN=
+TWITTER_API_TOKEN="12345"
 
 # For redirects
-EDGE_CONFIG=
+EDGE_CONFIG="/"
