--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "INIT_CWD=$PWD npm run setup && next build",
-    "build-only": "INIT_CWD=$PWD next build",
+    "build": "npm run setup && next build",
+    "build-only": "next build",
     "start": "next start",
     "setup": "node ./lib/setup.mjs"
   },
